--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -47,4 +47,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:8000/health')"
 
 # Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use PORT environment variable (Railway sets this automatically)
+CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
