--- a/client/.env.example
+++ b/client/.env.example
@@ -1,14 +1,4 @@
-# =============================================================================
-# AI Help Desk - Frontend Environment Configuration
-# =============================================================================
-# Copy this file to .env and update with your actual values
-# Never commit .env to Git (it's in .gitignore)
-# =============================================================================
-
-# Backend API Base URL
-# =============================================================================
-# LOCAL DEVELOPMENT:
 VITE_API_BASE_URL=http://localhost:8000
 
-# PRODUCTION (Update with your actual Render backend URL after deployment):
-# VITE_API_BASE_URL=https://your-backend.onrender.com
+# PRODUCTION (set via `vercel env add VITE_API_BASE_URL` when deploying to Vercel):
+# VITE_API_BASE_URL=https://bay-infotech-test-production.up.railway.app
